fixing game spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -62,18 +62,16 @@ button:hover {
 }
 
 #card {
-width: 200px;
-  border-radius: 5px;
-  padding: 20px;
-  text-align: center;
-  background-color:#181825;
-  transition: background-color 0.3s ease;
-  border-radius: 20px;
-  margin-left: 10px;
-  align-items: center;
-  border: 3px solid #1e1e2e;
-  margin-left:auto;
-  margin-right:auto;
+    width: 200px;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+    background-color: #181825;
+    transition: background-color 0.3s ease;
+    border-radius: 20px;
+    margin: 10px;
+    align-items: center;
+    border: 3px solid #1e1e2e;
 }
 
 #card button {
@@ -112,6 +110,7 @@ margin-top: 10px;
   display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: center; 
     align-items: center;
 }
 
